# LLM_locally

./: .gitignore  README.md  main.py  pyproject.toml
src/: app.py  cli.py
