[tool.poetry]
name = "llm-locally"
version = "0.1.0"
description = ""
authors = ["Ivan Kyulev <ivandkyulev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ollama = "^0.1.7"
transformers = "^4.38.2"
torch = "^2.2.1"
langchain = "^0.1.11"
chromadb = "^0.4.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
